--- a/FE.ipynb
+++ b/FE.ipynb
@@ -174,7 +174,7 @@
    "source": [
     "# Function to reduce `Year` scale\n",
     "def year(df):\n",
-    "    df['Year'] = df['Year'] % 2000\n",
+    "    df['Year'] = df['Year'] - 2000\n",
     "    return df"
    ]
   },
